modules/security_group/main.tf
# AWS SECURITY GROUP FOR EC2 INSTANCES
resource "aws_security_group" "web_and_ssh" {
  name        = "web_and_ssh"
  description = "Allow web ingress traffic"
  vpc_id      = var.vpc_id

  # HTTP port
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # SSH port
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Open access to public network
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Project 1"
  }
}
